update:docs, fileHandler.go && swagger
